# rpac

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  netlify.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/chglog/: RELEASE.tpl.md
.github/workflows/: audit.yml  deploy.yml  main.yml
aur/: PKGBUILD  rpac.toml
docs/: index.md  package-lock.json  package.json
docs/.vuepress/: config.js
src/: args.rs  callbacks.rs  config.rs  main.rs  utils.rs
src/commands/: completions.rs  database.rs  files.rs  mod.rs  query.rs  remove.rs  sync.rs  upgrade.rs
