[package]
authors = ["RPac contributors"]
categories = ["command-line-utilities"]
description = "A pacman re-implementation with AUR support"
edition = "2018"
homepage = "https://rpac.netlify.app"
include = ["/src", "/Cargo.*", "/README.md", "/LICENSE-*", "/build.rs"]
keywords = ["archlinux", "aur", "pacman"]
license = "MIT OR Apache-2.0"
name = "rpac"
readme = "README.md"
repository = "https://github.com/ATiltedTree/rpac"
version = "0.1.0"

[dependencies]
clap = { git = "https://github.com/clap-rs/clap.git" }
ctrlc = "3.1.6"
dialoguer = "0.6.2"
enum_dispatch = "0.3.3"
env_logger = "0.7.1"
indicatif = "0.15.0"
alpm =  { version = "0.10.2",features = [] }
raur = "3.0.1"
regex = "1.4.1"
toml = "0.5.6"
users = "0.11.0"
log = "0.4.11"
path-absolutize = "3.0.6"
itertools = "0.9.0"

[dependencies.serde]
features = ["derive"]
version = "1.0.116"

[badges]
is-it-maintained-issue-resolution = { repository = "ATiltedTree/rpac" }
is-it-maintained-open-issues = { repository = "ATiltedTree/rpac" }
maintenance = { status = "actively-developed" }
